# Copyright (c) 2013-2016 The Bitcoin Core developers
# Copyright (c) 2019 The Huntcoin Core developers
# Distributed under the MIT software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.

DIST_SUBDIRS = secp256k1 univalue

AM_LDFLAGS = $(PTHREAD_CFLAGS) $(LIBTOOL_LDFLAGS) $(HARDENED_LDFLAGS)
AM_CXXFLAGS = $(HARDENED_CXXFLAGS) $(ERROR_CXXFLAGS)
AM_CPPFLAGS = $(HARDENED_CPPFLAGS)
EXTRA_LIBRARIES =

if EMBEDDED_UNIVALUE
LIBUNIVALUE = univalue/libunivalue.la

$(LIBUNIVALUE): $(wildcard univalue/lib/*) $(wildcard univalue/include/*)
	$(AM_V_at)$(MAKE) $(AM_MAKEFLAGS) -C $(@D) $(@F)
else
LIBUNIVALUE = $(UNIVALUE_LIBS)
endif

HUNTCOIN_INCLUDES=-I$(builddir) $(BDB_CPPFLAGS) $(BOOST_CPPFLAGS) $(LEVELDB_CPPFLAGS) $(CRYPTO_CFLAGS) $(SSL_CFLAGS)

HUNTCOIN_INCLUDES += -I$(srcdir)/secp256k1/include
HUNTCOIN_INCLUDES += $(UNIVALUE_CFLAGS)

LIBHUNTCOIN_SERVER=libhuntcoin_server.a
LIBHUNTCOIN_COMMON=libhuntcoin_common.a
LIBHUNTCOIN_CONSENSUS=libhuntcoin_consensus.a
LIBHUNTCOIN_CLI=libhuntcoin_cli.a
LIBHUNTCOIN_UTIL=libhuntcoin_util.a
LIBHUNTCOIN_CRYPTO=crypto/libhuntcoin_crypto.a
LIBHUNTCOIN_ALGOS=crypto/algos/libhuntcoin_algos.a
LIBHUNTCOIN_HUNTCOIN_HARDFORK=huntcoin/libhuntcoin_hardfork.a
LIBHUNTCOINQT=qt/libhuntcoinqt.a
LIBSECP256K1=secp256k1/libsecp256k1.la

if ENABLE_ZMQ
LIBHUNTCOIN_ZMQ=libhuntcoin_zmq.a
endif
if BUILD_HUNTCOIN_LIBS
LIBHUNTCOINCONSENSUS=libhuntcoinconsensus.la
endif
if ENABLE_WALLET
LIBHUNTCOIN_WALLET=libhuntcoin_wallet.a
endif

$(LIBSECP256K1): $(wildcard secp256k1/src/*) $(wildcard secp256k1/include/*)
	$(AM_V_at)$(MAKE) $(AM_MAKEFLAGS) -C $(@D) $(@F)

# Make is not made aware of per-object dependencies to avoid limiting building parallelization
# But to build the less dependent modules first, we manually select their order here:
EXTRA_LIBRARIES += \
  $(LIBHUNTCOIN_CRYPTO) \
  $(LIBHUNTCOIN_ALGOS) \
  $(LIBHUNTCOIN_UTIL) \
  $(LIBHUNTCOIN_COMMON) \
  $(LIBHUNTCOIN_CONSENSUS) \
  $(LIBHUNTCOIN_HUNTCOIN_HARDFORK) \
  $(LIBHUNTCOIN_SERVER) \
  $(LIBHUNTCOIN_CLI) \
  $(LIBHUNTCOIN_WALLET) \
  $(LIBHUNTCOIN_ZMQ)

lib_LTLIBRARIES = $(LIBHUNTCOINCONSENSUS)

bin_PROGRAMS =
noinst_PROGRAMS =
TESTS =
BENCHMARKS =

if BUILD_HUNTCOIND
  bin_PROGRAMS += huntcoind
endif

if BUILD_HUNTCOIN_UTILS
  bin_PROGRAMS += huntcoin-cli huntcoin-tx
endif

.PHONY: FORCE check-symbols check-security
# huntcoin core #
HUNTCOIN_CORE_H = \
  addrdb.h \
  activemasternode.h \
  addrman.h \
  auxpow.h \
  base58.h \
  bech32.h \
  bignum.h \
  bloom.h \
  blockencodings.h \
  chain.h \
  chainparams.h \
  chainparamsbase.h \
  chainparamsseeds.h \
  checkpoints.h \
  checkqueue.h \
  clientversion.h \
  coins.h \
  compat.h \
  compat/byteswap.h \
  compat/endian.h \
  compat/sanity.h \
  compressor.h \
  consensus/consensus.h \
  consensus/tx_verify.h \
  core_io.h \
  core_memusage.h \
  cuckoocache.h \
  flat-database.h \
  fs.h \
  gltnotificationinterface.h \
  httprpc.h \
  httpserver.h \
  indirectmap.h \
  init.h \
  instantx.h \
  key.h \
  keystore.h \
  dbwrapper.h \
  limitedmap.h \
  masternode.h \
  masternode-helper.h \
  masternode-payments.h \
  masternode-sync.h \
  masternodeman.h \
  masternodeconfig.h \
  memusage.h \
  merkleblock.h \
  messagesigner.h \
  miner.h \
  net.h \
  net_processing.h \
  netaddress.h \
  netbase.h \
  netfulfilledman.h \
  netmessagemaker.h \
  noui.h \
  policy/feerate.h \
  policy/fees.h \
  policy/policy.h \
  policy/rbf.h \
  pow.h \
  protocol.h \
  random.h \
  reverse_iterator.h \
  reverselock.h \
  rpc/blockchain.h \
  rpc/client.h \
  rpc/mining.h \
  rpc/protocol.h \
  rpc/safemode.h \
  rpc/server.h \
  rpc/rawtransaction.h \
  rpc/register.h \
  rpc/util.h \
  scheduler.h \
  script/ismine.h \
  script/sigcache.h \
  script/sign.h \
  script/standard.h \
  spork.h \
  streams.h \
  support/allocators/secure.h \
  support/allocators/zeroafterfree.h \
  support/cleanse.h \
  support/events.h \
  support/lockedpool.h \
  sync.h \
  threadsafety.h \
  threadinterrupt.h \
  timedata.h \
  torcontrol.h \
  txdb.h \
  txmempool.h \
  ui_interface.h \
  undo.h \
  util.h \
  utilmoneystr.h \
  utiltime.h \
  validation.h \
  validationinterface.h \
  versionbits.h \
  wallet/coincontrol.h \
  wallet/crypter.h \
  wallet/db.h \
  wallet/feebumper.h \
  wallet/fees.h \
  wallet/init.h \
  wallet/rpcwallet.h \
  wallet/wallet.h \
  wallet/walletdb.h \
  wallet/walletutil.h \
  warnings.h \
  zmq/zmqabstractnotifier.h \
  zmq/zmqconfig.h\
  zmq/zmqnotificationinterface.h \
  zmq/zmqpublishnotifier.h


obj/build.h: FORCE
	@$(MKDIR_P) $(builddir)/obj
	@$(top_srcdir)/share/genbuild.sh "$(abs_top_builddir)/src/obj/build.h" \
	  "$(abs_top_srcdir)"
libhuntcoin_util_a-clientversion.$(OBJEXT): obj/build.h

# server: shared between huntcoind and huntcoin-qt
libhuntcoin_server_a_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES) $(MINIUPNPC_CPPFLAGS) $(EVENT_CFLAGS) $(EVENT_PTHREADS_CFLAGS) $(SCRYPT_FLAGS)
libhuntcoin_server_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
libhuntcoin_server_a_SOURCES = \
  activemasternode.cpp \
  addrdb.cpp \
  addrman.cpp \
  bloom.cpp \
  blockencodings.cpp \
  chain.cpp \
  checkpoints.cpp \
  consensus/tx_verify.cpp \
  gltnotificationinterface.cpp \
  httprpc.cpp \
  httpserver.cpp \
  init.cpp \
  instantx.cpp \
  dbwrapper.cpp \
  masternode.cpp \
  masternode-helper.cpp \
  masternode-payments.cpp \
  masternode-sync.cpp \
  masternodeconfig.cpp \
  masternodeman.cpp \
  merkleblock.cpp \
  messagesigner.cpp \
  miner.cpp \
  net.cpp \
  netfulfilledman.cpp \
  net_processing.cpp \
  noui.cpp \
  policy/fees.cpp \
  policy/policy.cpp \
  policy/rbf.cpp \
  pow.cpp \
  rest.cpp \
  rpc/blockchain.cpp \
  rpc/masternode.cpp \
  rpc/mining.cpp \
  rpc/misc.cpp \
  rpc/net.cpp \
  rpc/rawtransaction.cpp \
  rpc/safemode.cpp \
  rpc/server.cpp \
  script/sigcache.cpp \
  spork.cpp \
  timedata.cpp \
  torcontrol.cpp \
  txdb.cpp \
  txmempool.cpp \
  ui_interface.cpp \
  validation.cpp \
  validationinterface.cpp \
  versionbits.cpp \
  $(HUNTCOIN_CORE_H)

if ENABLE_ZMQ
libhuntcoin_zmq_a_CPPFLAGS = $(HUNTCOIN_INCLUDES) $(ZMQ_CFLAGS)
libhuntcoin_zmq_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
libhuntcoin_zmq_a_SOURCES = \
  zmq/zmqabstractnotifier.cpp \
  zmq/zmqnotificationinterface.cpp \
  zmq/zmqpublishnotifier.cpp
endif


# wallet: shared between huntcoind and huntcoin-qt, but only linked
# when wallet enabled
libhuntcoin_wallet_a_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES)
libhuntcoin_wallet_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
libhuntcoin_wallet_a_SOURCES = \
  wallet/crypter.cpp \
  wallet/db.cpp \
  wallet/feebumper.cpp \
  wallet/fees.cpp \
  wallet/init.cpp \
  wallet/rpcdump.cpp \
  wallet/rpcwallet.cpp \
  wallet/wallet.cpp \
  wallet/walletdb.cpp \
  wallet/walletutil.cpp \
  $(HUNTCOIN_CORE_H)

# crypto primitives library
crypto_libhuntcoin_crypto_a_CPPFLAGS = $(AM_CPPFLAGS)
crypto_libhuntcoin_crypto_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
crypto_libhuntcoin_crypto_a_SOURCES = \
  crypto/aes.cpp \
  crypto/aes.h \
  crypto/chacha20.h \
  crypto/chacha20.cpp \
  crypto/common.h \
  crypto/hmac_sha256.cpp \
  crypto/hmac_sha256.h \
  crypto/hmac_sha512.cpp \
  crypto/hmac_sha512.h \
  crypto/ripemd160.cpp \
  crypto/ripemd160.h \
  crypto/sha1.cpp \
  crypto/sha1.h \
  crypto/sha256.cpp \
  crypto/sha256.h \
  crypto/sha512.cpp \
  crypto/sha512.h

if USE_ASM
crypto_libhuntcoin_crypto_a_SOURCES += crypto/sha256_sse4.cpp
endif

# crypto algos library
crypto_algos_libhuntcoin_algos_a_CPPFLAGS = $(AM_CPPFLAGS) $(SCRYPT_FLAGS)
crypto_algos_libhuntcoin_algos_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS) $(YESCRYPT_COMPILE_FLAGS)
crypto_algos_libhuntcoin_algos_a_CFLAGS = $(NEOSCRYPT_FLAGS) $(YESCRYPT_COMPILE_FLAGS)
crypto_algos_libhuntcoin_algos_a_CCASFLAGS = $(NEOSCRYPT_FLAGS)
crypto_algos_libhuntcoin_algos_a_SOURCES = \
  crypto/algos/hashlib/blake.c \
  crypto/algos/hashlib/bmw.c \
  crypto/algos/hashlib/cubehash.c \
  crypto/algos/hashlib/echo.c \
  crypto/algos/hashlib/fugue.c \
  crypto/algos/hashlib/gost.c \
  crypto/algos/hashlib/groestl.c \
  crypto/algos/hashlib/hamsi.c \
  crypto/algos/hashlib/haval.c \
  crypto/algos/hashlib/jh.c \
  crypto/algos/hashlib/keccak.c \
  crypto/algos/hashlib/luffa.c \
  crypto/algos/hashlib/sha2big.c \
  crypto/algos/hashlib/shabal.c \
  crypto/algos/hashlib/shavite.c \
  crypto/algos/hashlib/simd.c \
  crypto/algos/hashlib/skein.c \
  crypto/algos/hashlib/sph_blake.h \
  crypto/algos/hashlib/sph_bmw.h \
  crypto/algos/hashlib/sph_cubehash.h \
  crypto/algos/hashlib/sph_echo.h \
  crypto/algos/hashlib/sph_fugue.h \
  crypto/algos/hashlib/sph_gost.h \
  crypto/algos/hashlib/sph_groestl.h \
  crypto/algos/hashlib/sph_hamsi.h \
  crypto/algos/hashlib/sph_haval.h \
  crypto/algos/hashlib/sph_jh.h \
  crypto/algos/hashlib/sph_keccak.h \
  crypto/algos/hashlib/sph_luffa.h \
  crypto/algos/hashlib/sph_sha2.h \
  crypto/algos/hashlib/sph_shabal.h \
  crypto/algos/hashlib/sph_shavite.h \
  crypto/algos/hashlib/sph_simd.h \
  crypto/algos/hashlib/sph_skein.h \
  crypto/algos/hashlib/sph_types.h \
  crypto/algos/hashlib/sph_whirlpool.h \
  crypto/algos/hashlib/whirlpool.c \
  crypto/algos/hashlib/aes_helper.c \
  crypto/algos/hashlib/multihash.h \
  crypto/algos/Lyra2RE/Lyra2.c \
  crypto/algos/Lyra2RE/Lyra2.h \
  crypto/algos/Lyra2RE/Lyra2RE.c \
  crypto/algos/Lyra2RE/Lyra2RE.h \
  crypto/algos/Lyra2RE/Sponge.c \
  crypto/algos/Lyra2RE/Sponge.h \
  crypto/algos/blake/blake2.h \
  crypto/algos/blake/blake2-impl.h \
  crypto/algos/blake/blake2b-ref.c \
  crypto/algos/blake/blake2s-ref.c \
  crypto/algos/blake/hashblake.h \
  crypto/algos/neoscrypt/neoscrypt.c \
  crypto/algos/neoscrypt/neoscrypt.h \
  crypto/algos/scrypt/scrypt.cpp \
  crypto/algos/scrypt/scrypt-sse2.cpp \
  crypto/algos/scrypt/scrypt.h \
  crypto/algos/equihash/equihash.cpp \
  crypto/algos/equihash/equihash.h \
  crypto/algos/equihash/equihash.tcc \
  crypto/algos/yescrypt/sha256_Y.c \
  crypto/algos/yescrypt/sha256_Y.h \
  crypto/algos/yescrypt/sysendian.h \
  crypto/algos/yescrypt/yescrypt.h \
  crypto/algos/yescrypt/yescrypt-best.c \
  crypto/algos/yescrypt/yescryptcommon.c

if USE_ASM
crypto_algos_libhuntcoin_algos_a_SOURCES += crypto/algos/neoscrypt/neoscrypt_asm.S
endif

# consensus: shared between all executables that validate any consensus rules.
libhuntcoin_consensus_a_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES)
libhuntcoin_consensus_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
libhuntcoin_consensus_a_SOURCES = \
  amount.h \
  arith_uint256.cpp \
  arith_uint256.h \
  consensus/merkle.cpp \
  consensus/merkle.h \
  consensus/params.h \
  consensus/validation.h \
  hash.cpp \
  hash.h \
  prevector.h \
  primitives/block.cpp \
  primitives/block.h \
  primitives/block_dependencies.cpp \
  primitives/block_dependencies.h \
  primitives/mining_block.cpp \
  primitives/mining_block.h \
  primitives/pureheader.cpp \
  primitives/pureheader.h \
  primitives/transaction.cpp \
  primitives/transaction.h \
  pubkey.cpp \
  pubkey.h \
  script/huntcoinconsensus.cpp \
  script/interpreter.cpp \
  script/interpreter.h \
  script/script.cpp \
  script/script.h \
  script/script_error.cpp \
  script/script_error.h \
  serialize.h \
  tinyformat.h \
  uint256.cpp \
  uint256.h \
  utilstrencodings.cpp \
  utilstrencodings.h \
  version.h
  
# hardfork library
huntcoin_libhuntcoin_hardfork_a_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES)
huntcoin_libhuntcoin_hardfork_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
huntcoin_libhuntcoin_hardfork_a_SOURCES = \
  huntcoin/hardfork.cpp \
  huntcoin/hardfork.h \
  arith_uint256.cpp \
  arith_uint256.h \
  uint256.cpp \
  uint256.h

# common: shared between huntcoind, and huntcoin-qt and non-server tools
libhuntcoin_common_a_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES)
libhuntcoin_common_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
libhuntcoin_common_a_SOURCES = \
  auxpow.cpp \
  base58.cpp \
  bech32.cpp \
  chainparams.cpp \
  coins.cpp \
  compressor.cpp \
  core_read.cpp \
  core_write.cpp \
  key.cpp \
  keystore.cpp \
  netaddress.cpp \
  netbase.cpp \
  policy/feerate.cpp \
  protocol.cpp \
  scheduler.cpp \
  script/ismine.cpp \
  script/sign.cpp \
  script/standard.cpp \
  warnings.cpp \
  $(HUNTCOIN_CORE_H)

# util: shared between all executables.
# This library *must* be included to make sure that the glibc
# backward-compatibility objects and their sanity checks are linked.
libhuntcoin_util_a_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES)
libhuntcoin_util_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
libhuntcoin_util_a_SOURCES = \
  support/lockedpool.cpp \
  chainparamsbase.cpp \
  clientversion.cpp \
  compat/glibc_sanity.cpp \
  compat/glibcxx_sanity.cpp \
  compat/strnlen.cpp \
  fs.cpp \
  random.cpp \
  rpc/protocol.cpp \
  rpc/util.cpp \
  support/cleanse.cpp \
  sync.cpp \
  threadinterrupt.cpp \
  util.cpp \
  utilmoneystr.cpp \
  utilstrencodings.cpp \
  utiltime.cpp \
  $(HUNTCOIN_CORE_H)

if GLIBC_BACK_COMPAT
libhuntcoin_util_a_SOURCES += compat/glibc_compat.cpp
endif

# cli: shared between huntcoin-cli and huntcoin-qt
libhuntcoin_cli_a_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES)
libhuntcoin_cli_a_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
libhuntcoin_cli_a_SOURCES = \
  rpc/client.cpp \
  $(HUNTCOIN_CORE_H)

nodist_libhuntcoin_util_a_SOURCES = $(srcdir)/obj/build.h
#

# huntcoind binary #
huntcoind_SOURCES = huntcoind.cpp
huntcoind_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES)
huntcoind_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
huntcoind_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS) $(YESCRYPT_LDFLAGS)

if TARGET_WINDOWS
huntcoind_SOURCES += huntcoind-res.rc
endif

huntcoind_LDADD = \
  $(LIBHUNTCOIN_SERVER) \
  $(LIBHUNTCOIN_WALLET) \
  $(LIBHUNTCOIN_COMMON) \
  $(LIBUNIVALUE) \
  $(LIBHUNTCOIN_UTIL) \
  $(LIBHUNTCOIN_ZMQ) \
  $(LIBHUNTCOIN_CONSENSUS) \
  $(LIBHUNTCOIN_HUNTCOIN_HARDFORK) \
  $(LIBHUNTCOIN_CRYPTO) \
  $(LIBHUNTCOIN_ALGOS) \
  $(LIBLEVELDB) \
  $(LIBLEVELDB_SSE42) \
  $(LIBMEMENV) \
  $(LIBSECP256K1)

huntcoind_LDADD += $(BOOST_LIBS) $(BDB_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(MINIUPNPC_LIBS) $(EVENT_PTHREADS_LIBS) $(EVENT_LIBS) $(ZMQ_LIBS) $(LIBEQUIHASH_LIBS)

# huntcoin-cli binary #
huntcoin_cli_SOURCES = huntcoin-cli.cpp
huntcoin_cli_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES) $(EVENT_CFLAGS)
huntcoin_cli_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
huntcoin_cli_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)

if TARGET_WINDOWS
huntcoin_cli_SOURCES += huntcoin-cli-res.rc
endif

huntcoin_cli_LDADD = \
  $(LIBHUNTCOIN_CLI) \
  $(LIBUNIVALUE) \
  $(LIBHUNTCOIN_UTIL) \
  $(LIBHUNTCOIN_CRYPTO) \
  $(LIBHUNTCOIN_ALGOS)

huntcoin_cli_LDADD += $(BOOST_LIBS) $(SSL_LIBS) $(CRYPTO_LIBS) $(EVENT_LIBS) $(LIBEQUIHASH_LIBS)
#

# huntcoin-tx binary #
huntcoin_tx_SOURCES = huntcoin-tx.cpp
huntcoin_tx_CPPFLAGS = $(AM_CPPFLAGS) $(HUNTCOIN_INCLUDES) $(YESCRYPT_COMPILE_FLAGS)
huntcoin_tx_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS) $(YESCRYPT_COMPILE_FLAGS)
huntcoin_tx_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)

if TARGET_WINDOWS
huntcoin_tx_SOURCES += huntcoin-tx-res.rc
endif

huntcoin_tx_LDADD = \
  $(LIBUNIVALUE) \
  $(LIBHUNTCOIN_COMMON) \
  $(LIBHUNTCOIN_UTIL) \
  $(LIBHUNTCOIN_CONSENSUS) \
  $(LIBHUNTCOIN_HUNTCOIN_HARDFORK) \
  $(LIBHUNTCOIN_CRYPTO) \
  $(LIBHUNTCOIN_ALGOS) \
  $(LIBSECP256K1) \
  $(LIBEQUIHASH_LIBS)

huntcoin_tx_LDADD += $(BOOST_LIBS) $(CRYPTO_LIBS)
#

# huntcoinconsensus library #
if BUILD_HUNTCOIN_LIBS
include_HEADERS = script/huntcoinconsensus.h
libhuntcoinconsensus_la_SOURCES = $(crypto_libhuntcoin_crypto_a_SOURCES) $(crypto_algos_libhuntcoin_algos_a_SOURCES) $(libhuntcoin_consensus_a_SOURCES)

if GLIBC_BACK_COMPAT
  libhuntcoinconsensus_la_SOURCES += compat/glibc_compat.cpp
endif

libhuntcoinconsensus_la_LDFLAGS = $(AM_LDFLAGS) -no-undefined $(RELDFLAGS)
libhuntcoinconsensus_la_LIBADD = $(LIBSECP256K1) $(BOOST_LIBS) $(LIBEQUIHASH_LIBS)
libhuntcoinconsensus_la_CPPFLAGS =  $(AM_CPPFLAGS) $(SCRYPT_FLAGS) -I$(builddir)/obj -I$(srcdir)/secp256k1/include -DBUILD_HUNTCOIN_INTERNAL -DNO_UTIL_LOG
libhuntcoinconsensus_la_CXXFLAGS =  $(AM_CXXFLAGS) $(PIE_FLAGS) $(YESCRYPT_COMPILE_FLAGS)
libhuntcoinconsensus_la_CFLAGS =    $(NEOSCRYPT_FLAGS) $(YESCRYPT_COMPILE_FLAGS)
libhuntcoinconsensus_la_CCASFLAGS = $(NEOSCRYPT_FLAGS)

endif
#

CTAES_DIST =  crypto/ctaes/bench.c
CTAES_DIST += crypto/ctaes/ctaes.c
CTAES_DIST += crypto/ctaes/ctaes.h
CTAES_DIST += crypto/ctaes/README.md
CTAES_DIST += crypto/ctaes/test.c

YESCRYPT_DIST = crypto/algos/yescrypt/yescrypt-platform.c
YESCRYPT_DIST += crypto/algos/yescrypt/yescrypt-opt.c
YESCRYPT_DIST += crypto/algos/yescrypt/yescrypt-simd.c

CLEANFILES = $(EXTRA_LIBRARIES)

CLEANFILES += *.gcda *.gcno
CLEANFILES += compat/*.gcda compat/*.gcno
CLEANFILES += consensus/*.gcda consensus/*.gcno
CLEANFILES += crypto/*.gcda crypto/*.gcno
CLEANFILES += huntcoin/*.gcda huntcoin/*.gcno
CLEANFILES += policy/*.gcda policy/*.gcno
CLEANFILES += primitives/*.gcda primitives/*.gcno
CLEANFILES += script/*.gcda script/*.gcno
CLEANFILES += support/*.gcda support/*.gcno
CLEANFILES += univalue/*.gcda univalue/*.gcno
CLEANFILES += wallet/*.gcda wallet/*.gcno
CLEANFILES += wallet/test/*.gcda wallet/test/*.gcno
CLEANFILES += zmq/*.gcda zmq/*.gcno
CLEANFILES += obj/build.h

EXTRA_DIST = $(CTAES_DIST) $(YESCRYPT_DIST)


config/huntcoin-config.h: config/stamp-h1
	@$(MAKE) -C $(top_builddir) $(subdir)/$(@)
config/stamp-h1: $(top_srcdir)/$(subdir)/config/huntcoin-config.h.in $(top_builddir)/config.status
	$(AM_V_at)$(MAKE) -C $(top_builddir) $(subdir)/$(@)
$(top_srcdir)/$(subdir)/config/huntcoin-config.h.in:  $(am__configure_deps)
	$(AM_V_at)$(MAKE) -C $(top_srcdir) $(subdir)/config/huntcoin-config.h.in

clean-local:
	-$(MAKE) -C secp256k1 clean
	-$(MAKE) -C univalue clean
	-rm -f leveldb/*/*.gcda leveldb/*/*.gcno leveldb/helpers/memenv/*.gcda leveldb/helpers/memenv/*.gcno
	-rm -f config.h
	-rm -rf test/__pycache__

.rc.o:
	@test -f $(WINDRES)
	## FIXME: How to get the appropriate modulename_CPPFLAGS in here?
	$(AM_V_GEN) $(WINDRES) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(CPPFLAGS) -DWINDRES_PREPROC -i $< -o $@

check-symbols: $(bin_PROGRAMS)
if GLIBC_BACK_COMPAT
	@echo "Checking glibc back compat..."
	$(AM_V_at) READELF=$(READELF) CPPFILT=$(CPPFILT) $(top_srcdir)/contrib/devtools/symbol-check.py < $(bin_PROGRAMS)
endif

check-security: $(bin_PROGRAMS)
if HARDEN
	@echo "Checking binary security..."
	$(AM_V_at) READELF=$(READELF) OBJDUMP=$(OBJDUMP) $(top_srcdir)/contrib/devtools/security-check.py < $(bin_PROGRAMS)
endif

%.pb.cc %.pb.h: %.proto
	@test -f $(PROTOC)
	$(AM_V_GEN) $(PROTOC) --cpp_out=$(@D) --proto_path=$(<D) $<

if EMBEDDED_LEVELDB
include Makefile.leveldb.include
endif

if ENABLE_TESTS
include Makefile.test.include
endif

if ENABLE_BENCH
include Makefile.bench.include
endif

if ENABLE_QT
include Makefile.qt.include
endif

if ENABLE_QT_TESTS
include Makefile.qttest.include
endif
